# AI-stylist-recommendation

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pipeline.md  pyproject.toml
docker/neo4j/: seed.cypher
docker/postgres/: init.sql
scripts/: index_concepts.py  init_concepts.py  init_graphdb.py  init_qdrant.py  seed_knowledge.sql  serve.py
scripts/seeds/: kg_rules_seed.json  knowledge_graph.json  product_bm25_seed.json  product_catalog_seed.json  product_vector_seed.json  products.json
src/ai_stylist/: config.py  main.py
src/ai_stylist/api/internal/: products.py
src/ai_stylist/api/v1/: chat.py  knowledge.py  recommendations.py  router.py
src/ai_stylist/clients/: product_client.py
src/ai_stylist/db/: neo4j.py  postgres.py
src/ai_stylist/models/: __init__.py  concept.py  knowledge_source.py  message.py  session.py
src/ai_stylist/repositories/: concept_repo.py  message_repo.py  session_repo.py
src/ai_stylist/schemas/: chat.py  knowledge.py  product.py  recommendation.py
src/ai_stylist/services/agent/: checkpointer.py  graph.py  store.py  tools.py
src/ai_stylist/services/chat/: agent_service.py  session_service.py
src/ai_stylist/services/concept/: cache.py  concept_index.py  embedding_service.py  ingestion.py  knowledge_graph.py
src/ai_stylist/services/llm/: final_response_generator.py  gemini_client.py  intent_extractor.py  search_term_generator.py
src/ai_stylist/services/product/: bm25_encoder.py  hybrid_retriever.py  qdrant_sync.py
src/ai_stylist/services/recommendation/: pipeline.py  search_plan.py
tests/: conftest.py  generate_test_case_workbook.py  test_cases.xlsx  test_recommendation_pipeline.py  tool_test_scenarios.md
tests/data/: test_cases.py
